mealie/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/group: Utilities
    gethomepage.dev/icon: sh-mealie.svg
    gethomepage.dev/name: Mealie
    gethomepage.dev/description: Recipe manager
    gethomepage.dev/pod-selector: app=mealie
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - mealie.jef.app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mealie
          port: 9000
          group: ''
          kind: Service
          weight: 1
